force-app/main/default/objects/Opportunity/fields/Invoice_Timing__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Timing__c</fullName>
    <inlineHelpText>Per Service – Price indicated on product
Per Agreement - $0 on individual visits, full amount billed on final service</inlineHelpText>
    <label>Invoice Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Service</fullName>
            </value>
            <value>
                <fullName>Per Agreement</fullName>
            </value>
            <value>
                <fullName>Prepaid PO</fullName>
                <isActive>false</isActive>
                <label>Prepaid PO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>