force-app/main/default/objects/Opportunity/fields/LMS_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>LMS_Org_ID__c</fullName>
    <formula>Account.SABA_LMS_Code__c</formula>
    <label>LMS Org ID</label>
    <type>Text</type>
</CustomField>