force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <description>Please fill this out if the Opportunity has been Closed-Lost.</description>
    <inlineHelpText>Please fill this out if the Opportunity has been Closed-Lost.  It is required if the Opportunity had a potential for over $50,000.</inlineHelpText>
    <label>Loss Reason</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>