force-app/main/default/objects/Opportunity/fields/Lunch__c.field-meta.xml
<CustomField>
    <fullName>Lunch__c</fullName>
    <inlineHelpText>Length of time of lunch and any other information</inlineHelpText>
    <label>Lunch</label>
    <length>140</length>
    <type>Text</type>
</CustomField>