force-app/main/default/objects/Opportunity/fields/Materials__c.field-meta.xml
<CustomField>
    <fullName>Materials__c</fullName>
    <inlineHelpText>Choose method for materials</inlineHelpText>
    <label>Materials</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchase Materials - (see special Instructions below)</fullName>
            </value>
            <value>
                <fullName>Customer Downloads Materials</fullName>
            </value>
            <value>
                <fullName>Red Cross Provides Materials for In Class Use Only</fullName>
            </value>
            <value>
                <fullName>Course Includes Materials</fullName>
            </value>
            <value>
                <fullName>Customer Provides Materials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>