force-app/main/default/objects/Opportunity/fields/Minimum_of_Students__c.field-meta.xml
<CustomField>
    <fullName>Minimum_of_Students__c</fullName>
    <label>Minimum # of Students</label>
    <length>255</length>
    <type>Text</type>
</CustomField>