force-app/main/default/objects/Opportunity/fields/Multi_Jurisdictional__c.field-meta.xml
<CustomField>
    <fullName>Multi_Jurisdictional__c</fullName>
    <inlineHelpText>FS Opportunities ONLY. Do not complete for AP/LTP</inlineHelpText>
    <label>Multi-Location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>