force-app/main/default/objects/Opportunity/fields/Multi_Jurisdictional_Type__c.field-meta.xml
<CustomField>
    <fullName>Multi_Jurisdictional_Type__c</fullName>
    <inlineHelpText>FS Opportunities ONLY. Do not complete for AP/LTP</inlineHelpText>
    <label>Multi-Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Multi_Jurisdictional__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single POC, Central Billing</fullName>
            </value>
            <value>
                <fullName>Single POC, Local Billing</fullName>
            </value>
            <value>
                <fullName>Local POC, Central Billing</fullName>
            </value>
            <value>
                <fullName>Local POC, Local Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>