force-app/main/default/objects/Opportunity/fields/Multi_year_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Multi_year_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-year Agreement?</label>
    <type>Checkbox</type>
</CustomField>