force-app/main/default/objects/Opportunity/fields/Number_in_Class__c.field-meta.xml
<CustomField>
    <fullName>Number_in_Class__c</fullName>
    <description>The number of students in the class.</description>
    <inlineHelpText>The number of students in the class.</inlineHelpText>
    <label>Number in Class</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>