force-app/main/default/objects/Opportunity/fields/Number_of_Additional_Videos__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Additional_Videos__c</fullName>
    <inlineHelpText>Number of videos requested IN ADDITION to what is included in initial package</inlineHelpText>
    <label>Number of Additional Videos</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>