force-app/main/default/objects/Opportunity/fields/Number_of_Additional_Visits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Additional_Visits__c</fullName>
    <description>Number of visits requested IN ADDITION to what is provided in initial package</description>
    <inlineHelpText>Number of visits requested IN ADDITION to what is provided in initial package</inlineHelpText>
    <label>Number of Additional Visits</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>