force-app/main/default/objects/Opportunity/fields/Number_of_Sites__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sites__c</fullName>
    <inlineHelpText>Site indicates same physical location, not individual pools</inlineHelpText>
    <label>Number of Sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>