force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_PhExt__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_PhExt__c</fullName>
    <description>This field is used for Email Merge puposes only</description>
    <formula>Owner.Extension</formula>
    <label>Opportunity Owner PhExt</label>
    <type>Text</type>
</CustomField>