force-app/main/default/objects/Opportunity/fields/Opportunity_Result_Detail_1__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Result_Detail_1__c</fullName>
    <label>Opportunity Result Detail 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Result__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Being Worked</fullName>
            </value>
            <value>
                <fullName>Sent Proposal</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Closed Failed to Connect</fullName>
            </value>
            <value>
                <fullName>ARC Community</fullName>
            </value>
            <value>
                <fullName>ARC AP</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Date Availability</fullName>
            </value>
            <value>
                <fullName>Local Rep</fullName>
            </value>
            <value>
                <fullName>Not Interested - No Reason Given</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Buyer&#39;s Remorse</fullName>
            </value>
            <value>
                <fullName>Instructor No Show</fullName>
            </value>
            <value>
                <fullName>No Contact - Follow Up</fullName>
            </value>
            <value>
                <fullName>Price - Bugdet</fullName>
            </value>
            <value>
                <fullName>NAN</fullName>
            </value>
            <value>
                <fullName>SD Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pricing Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>