force-app/main/default/objects/Opportunity/fields/Opportunity_Result_Detail_2__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Result_Detail_2__c</fullName>
    <label>Opportunity Result Detail 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Result_Detail_1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Called No Answer</fullName>
            </value>
            <value>
                <fullName>Connect POC</fullName>
            </value>
            <value>
                <fullName>Connect POC VM</fullName>
            </value>
            <value>
                <fullName>Agreement Pending</fullName>
            </value>
            <value>
                <fullName>Agreement to Sales Admin</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Group Size</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Full Service</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Shopping</fullName>
            </value>
            <value>
                <fullName>Too High</fullName>
            </value>
            <value>
                <fullName>Date Availability</fullName>
            </value>
            <value>
                <fullName>Training Loaction</fullName>
            </value>
            <value>
                <fullName>SD unable to reach customer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>