force-app/main/default/objects/Opportunity/fields/Override_Channel__c.field-meta.xml
<CustomField>
    <fullName>Override_Channel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Channel</label>
    <type>Checkbox</type>
</CustomField>