force-app/main/default/objects/Opportunity/fields/Pricing_Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Approval_Level__c</fullName>
    <inlineHelpText>Because of a discount given on a line item, this opportunity will need approval to be Closed-Won at this level.</inlineHelpText>
    <label>Pricing Approval Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Approval Needed</fullName>
                <default>true</default>
                <label>No Approval Needed</label>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Sales Director</fullName>
            </value>
            <value>
                <fullName>Executive Director</fullName>
            </value>
            <value>
                <fullName>MOM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>