force-app/main/default/objects/Opportunity/fields/Pricing_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Approval_Status__c</fullName>
    <formula>IF(TEXT(Pricing_Approval_Level__c)=&quot;No Approval Needed&quot;,
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;),
( 
IF(TEXT(Approval_Status__c)=&quot;Approved&quot;,
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;),
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;)
)
)
)</formula>
    <label>Pricing Approval Status</label>
    <type>Text</type>
</CustomField>