force-app/main/default/objects/Opportunity/fields/Primary_Product__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product__c</fullName>
    <description>This is the product category the sales rep is &quot;leading&quot; the opportunity with.</description>
    <inlineHelpText>This is the product category the sales rep is &quot;leading&quot; the opportunity with.</inlineHelpText>
    <label>Primary Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AED</fullName>
            </value>
            <value>
                <fullName>AES</fullName>
            </value>
            <value>
                <fullName>Aquatics Learn to Swim</fullName>
            </value>
            <value>
                <fullName>Aquatics Other</fullName>
            </value>
            <value>
                <fullName>Babysitting</fullName>
            </value>
            <value>
                <fullName>Basic Water Rescue</fullName>
            </value>
            <value>
                <fullName>BLS</fullName>
            </value>
            <value>
                <fullName>Continuing Education Units</fullName>
            </value>
            <value>
                <fullName>Emergency Preparedness</fullName>
            </value>
            <value>
                <fullName>EMR</fullName>
            </value>
            <value>
                <fullName>First Aid</fullName>
            </value>
            <value>
                <fullName>First Aid/CPR/AED Training</fullName>
            </value>
            <value>
                <fullName>First Aid Emergency Drills</fullName>
            </value>
            <value>
                <fullName>Lifeguarding</fullName>
            </value>
            <value>
                <fullName>Lifeline</fullName>
            </value>
            <value>
                <fullName>Nurse Assistant Training</fullName>
            </value>
            <value>
                <fullName>OSHA</fullName>
            </value>
            <value>
                <fullName>Ready Rating</fullName>
            </value>
            <value>
                <fullName>Safety Training for Swim Coaches</fullName>
            </value>
            <value>
                <fullName>Training Supplies</fullName>
            </value>
            <value>
                <fullName>Water Safety Instructor</fullName>
            </value>
            <value>
                <fullName>Water Safety Outreach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>