force-app/main/default/objects/Opportunity/fields/Saba_Order__c.field-meta.xml
<CustomField>
    <fullName>Saba_Order__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Enter the Saba Order number</inlineHelpText>
    <label>Saba Order #</label>
    <length>140</length>
    <type>Text</type>
</CustomField>