force-app/main/default/objects/Opportunity/fields/SCC_User__c.field-meta.xml
<CustomField>
    <fullName>SCC_User__c</fullName>
    <formula>IF(Owner.Profile.Id = &quot;00ed0000000IiEd&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SCC User</label>
    <type>Checkbox</type>
</CustomField>