force-app/main/default/objects/Opportunity/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <inlineHelpText>Enter any pertinent information or special instructions</inlineHelpText>
    <label>Special Instructions</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>