force-app/main/default/objects/Opportunity/fields/Training_Contact__c.field-meta.xml
<CustomField>
    <fullName>Training_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the contact for training (if known)</inlineHelpText>
    <label>Training Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>