force-app/main/default/objects/Opportunity/fields/Training_Contact_Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Training_Contact_Cell_Phone__c</fullName>
    <formula>Training_Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Contact Cell Phone</label>
    <type>Text</type>
</CustomField>