force-app/main/default/objects/Opportunity/fields/Training_Contact_Office_Title__c.field-meta.xml
<CustomField>
    <fullName>Training_Contact_Office_Title__c</fullName>
    <formula>Training_Contact__r.Title &amp; &quot; &quot; &amp;Training_Contact__r.FirstName &amp; &quot; &quot; &amp;  Training_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Contact Office Title</label>
    <type>Text</type>
</CustomField>