force-app/main/default/objects/Opportunity/fields/Training_Events_Created__c.field-meta.xml
<CustomField>
    <fullName>Training_Events_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Records if Training Events have been created for Opportunity.</description>
    <label>Training Events Created</label>
    <type>Checkbox</type>
</CustomField>