force-app/main/default/objects/Opportunity/fields/Training_Location__c.field-meta.xml
<CustomField>
    <fullName>Training_Location__c</fullName>
    <inlineHelpText>Enter specific Information about the location for the class</inlineHelpText>
    <label>Training Location</label>
    <type>TextArea</type>
</CustomField>