force-app/main/default/objects/Opportunity/fields/Written_test__c.field-meta.xml
<CustomField>
    <fullName>Written_test__c</fullName>
    <inlineHelpText>Will there be a written test?</inlineHelpText>
    <label>Written Test?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>