force-app/main/default/objects/Opportunity/recordTypes/Sales_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Sales_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Sales Oppty Path</businessProcess>
    <description>Manage the Opportunity Sales Process</description>
    <label>Sales Opportunity</label>
</RecordType>