force-app/main/default/objects/Opportunity/validationRules/Approval_Required_Before_Closing_the_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Required_Before_Closing_the_Opp</fullName>
    <active>true</active>
    <description>Approval Required before moving the Opportunity Stage  to Closed Won.</description>
    <errorConditionFormula>AND( 
$User.Id &lt;&gt; &quot;005d0000000TvOu&quot;, 
$User.Id &lt;&gt; &quot;005d0000000Tuxg&quot;, 
( 
NOT(ISPICKVAL( Approval_Status__c , &#39;Approved&#39;)) &amp;&amp; NOT(ISPICKVAL( Pricing_Approval_Level__c , &#39;No Approval Needed&#39;)) &amp;&amp; (ISPICKVAL( StageName , &#39;Closed Won&#39;)) 
) 
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Opportunity can not be closed until it gets Approved.</errorMessage>
</ValidationRule>