force-app/main/default/objects/Opportunity/validationRules/Approved_for_Commision_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_for_Commision_Payment</fullName>
    <active>true</active>
    <description>Approved for Commision Payment permission on check box</description>
    <errorConditionFormula>OR(
AND(
ISNEW(), 
Approved_for_Commision_Payment__c = TRUE,
$User.Id != &quot;005d0000000TwTQ&quot;, /*Ellen Jones*/
$User.ProfileId != &quot;00ed0000000uehO&quot;, /*System Administrator*/
$User.ProfileId != &quot;00ed0000000IUPl&quot;, /*System Admin + Deploy*/
$Setup.Validation_Rules__c.Bypass_Rules__c = False),
AND(
ISCHANGED( Approved_for_Commision_Payment__c ),
$User.Id != &quot;005d0000000TwTQ&quot;, /*Ellen Jones*/
$User.ProfileId != &quot;00ed0000000uehO&quot;, /*System Administrator*/
$User.ProfileId != &quot;00ed0000000IUPl&quot;, /*System Admin + Deploy*/
$Setup.Validation_Rules__c.Bypass_Rules__c = False))</errorConditionFormula>
    <errorDisplayField>Approved_for_Commision_Payment__c</errorDisplayField>
    <errorMessage>You do not have permission to update &quot;Approved for Commission Payment&quot;. Please contact Ellen Jones if this field must be updated.</errorMessage>
</ValidationRule>