force-app/main/default/objects/Opportunity/validationRules/Closed_Lost_Reason_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost_Reason_rule</fullName>
    <active>true</active>
    <description>Can not save record if Closed Lost stage is selected without a value in the Closed Lost Reason field</description>
    <errorConditionFormula>AND(

NOT($Setup.Validation_Rules__c.Bypass_Rules__c),
ISPICKVAL(StageName, &quot;Closed Lost&quot;),
ISpickval(Closed_Lost_Reason_New__c,&quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Closed_Lost_Reason_New__c</errorDisplayField>
    <errorMessage>Must choose &quot;Closed Lost Reason&quot;</errorMessage>
</ValidationRule>